remove field from rule to prevent extra margin at bottom

--- a/html/themes/custom/iasc_common_design/sass/iasc-custom/_field.scss
+++ b/html/themes/custom/iasc_common_design/sass/iasc-custom/_field.scss
@@ -38,7 +38,6 @@
 .field--name-group-content-access,
 .field--name-field-ap-responsibility,
 .field--name-field-host,
-.field--name-field-agenda-items,
 .field--name-field-info-private,
 .field--name-field-oa-media,
 .field--name-field-main-image,
